demo02/overlays/staging/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: hello
          image: louiznk/helloworld-go:1.1
